# md5-mini-rag

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/raw/: README.md
docs/: exigences_rag.md
prompts/: moderator_system.txt  rag_system.txt
src/md5_mini_rag/: __init__.py  chunking.py  cli.py  config.py  documents.py  embeddings.py  indexing.py  llm.py  loaders.py  moderation.py  moderator.py  prompting.py  qa.py  rag.py  vectordb.py  vectorstore.py
tests/: test_chunking.py  test_embeddings.py  test_moderation.py  test_moderator.py  test_prompting.py  test_rag.py  test_vectordb.py
