[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md5-mini-rag"
version = "0.1.0"
description = "Mini-RAG pedagogique avec ChromaDB, Sentence Transformers et Groq."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "chromadb>=0.5.0",
  "groq>=0.9.0",
  "numpy>=1.26.0",
  "pypdf>=4.0.0",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
  "sentence-transformers>=3.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
rag = "md5_mini_rag.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
